# tflite-micro-python-comparison

./: README.md  build.sh
build-amd64/: CMakeCache.txt  Makefile  cmake_install.cmake
build-amd64/src/: Makefile  amd64-mnist-tflite-micro  cmake_install.cmake
python/: digit.txt  python_benchmark.py
source/: CMakeLists.txt
source/cmake/: tensorflow_lite_micro.cmake
source/src/: CMakeLists.txt  main.cpp
